create p in html file

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 </head>
 <body>
     <h1>hello this video is learning everything</h1>
-    <h2>انا استفدت جدا من هذا الفيديو</h2>
-    <h3>adham</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta minima earum asperiores minus quisquam, alias maiores saepe expedita maxime iusto!</p>
 </body>
 </html>
