--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>hello this video is learning everything</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta minima earum asperiores minus quisquam, alias maiores saepe expedita maxime iusto!</p>
+    <p>I'm Adham </p>
 </body>
 </html>
