i changed in css file and html file

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>hello this video is learning everything</h1>
     <p>I'm Adham </p>
+    <h2>i have a test today</h2>
 </body>
 </html>
