--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <h1>hello this video is learning everything</h1>
     <p>I'm Adham </p>
     <h2>i have a test today</h2>
+    <p class="class">انا تعبان نفسيتى باظت خلاص </p>
+    <p class="class">متأمنيش انك هتسبينى فى حاله وترجعيلى فى نفس الحاله حالا انا بغير العالم </p>
 </body>
 </html>
