--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
 <body>
     <h1>hello this video is learning everything</h1>
     <p>I'm Adham </p>
-    <h2>i have a test today</h2>
-    <h3>I love you my baby</h3>
-    <h4>I'm the better</h4>
+    <H2>كن التغيير الذى تريد رؤيته فى هذا العالم </H2>
 </body>
 </html>
