--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>git & github</title>
+    <title>صفحة تسجيل الدخول</title>
 </head>
 <body>
-    <h1>hello this video is learning everything</h1>
-    <p>I'm Adham </p>
-    <H2>كن التغيير الذى تريد رؤيته فى هذا العالم </H2>
-    <h3>i want to be a rich</h3>
+    <h1>تسجيل الدخول</h1>
+    <form action="#" method="post">
+        <label for="username">اسم المستخدم:</label>
+        <input type="text" id="username" name="username" required>
+        <br>
+        <label for="password">كلمة المرور:</label>
+        <input type="password" id="password" name="password" required>
+        <br>
+        <button type="submit">دخول</button>
+    </form>
 </body>
-</html>
